<resources>
    <string name="app_name">Aop</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_splash_screen">SplashScreen</string>

    <!--  Screens name-->
    <string name="home_screen_title">A C A D E M Y  O F  P O P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Home Screen-->
    <string name="bookmark_text">10K</string>
    <string name="home_screen_title1">5th take’s the charm. #danceclass #fluid #lesson2 #groove</string>
    <string name="comments_text">20K</string>
    <string name="learn_it_button_text">Learn It</string>
    <string name="try_it_button_text">Try It</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_discover">Discover</string>
    <string name="bottom_navigation_new_post">New Post</string>
    <string name="bottom_navigation_learn">Learn</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!--    Discover Screen-->
    <string name="profile_name">"Profile name"</string>
    <string name="view_more">"View More"</string>


    <!--    SignUp Screen-->
    <string name="signUp">Sign Up</string>
    <string name="signUp_heading">Sign up for Academy of Pop</string>
    <string name="signUpText">Use Mobile Number</string>
    <string name="alreadyLoginTxt">Already have an account? <a style="color:#FF000000" href="">Log In</a></string>
    <string name="signUpTxt">What’s Your Mobile Number?</string>
    <string name="signUpMobileTxt">Please enter your mobile number so we know
        where to contact you.</string>
    <string name="signUpTxt1">When’s Your Birthday?</string>
    <string name="signUpDesc">This won’t be shared publicly</string>
    <string name="signUpMobileHint">Mobile Number</string>


    <!--    Terms and condition -->
    <string name="disclaimerTxt">By continuing, you agree to our Terms of Service and acknowledge that you have read our Privacy Policy.</string>
    <string name="termsOfService">TERMS OF SERVICE</string>
    <string name="privacyPolicy">PRIVACY POLICY</string>
    <string name="backStackTitle">Title</string>

</resources>