<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:repeat_toggle_modes="one"
        app:resize_mode="zoom"
        app:use_controller="false" />

    <FrameLayout
        android:id="@+id/playerViewFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/video_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/video_description_tv"
        app:layout_constraintStart_toStartOf="@+id/video_description_tv" />

    <iterate.ai.aop.custom_views.TruncatingTextView
        android:id="@+id/video_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_screen_title1"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/barrier_cta"
        app:layout_constraintEnd_toStartOf="@id/user_profile_iv"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bookmark_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toTopOf="@+id/bookmark_text_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/star_8__stroke_"
        app:tint="@android:color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bookmark_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="22dp"
        android:text="@string/bookmark_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/comments_iv"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/comments_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toTopOf="@+id/comments_text_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_bookmark_outline"
        app:tint="@android:color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/comments_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="22dp"
        android:text="@string/comments_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/share_iv"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/share_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_share_solid_default"
        app:tint="@android:color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_profile_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier_cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ellipse_35"
        app:tint="@android:color/white" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="learn_it_button, try_it_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learn_it_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/learn_it_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideCenter"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/try_it_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/try_it_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideCenter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>